--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,8 +12,8 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v2/', 'dockerhub') {
-       def app = docker.build("neteng1378/docker-nodejs-demo:${commit_id}", '.').push()
+     withDockerRegistry([ credentialsId: "dockerhub", url: "" ]) {
+     def app = docker.build("neteng1378/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
 }
